deploy: LucaLanziani/personal-site-hugo@83472f18402d0821214c12fc6361fa01c22f1be3

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
 </div>
 <article>
 <h2>
+<a href=https://lanziani.com/posts/2021/10/genesis/>
+Let's talk terraform: genesis
+</a>
+</h2>
+<div>
+<p><p>I have used Terraform daily for the past five years, and during this time, I have developed some ideas on how to use it.</p>
+<ul>
+<li>What to use.</li>
+<li>What not to.</li>
+<li>Why.</li>
+</ul>
+<p>Here starts a series of posts meant to share how we are using terraform in 2021.</p></p>
+<p><a href=/posts/2021/10/genesis/>Read more...</a></p>
+</div>
+<div class=post-footer>
+<time>October 19, 2021</time>
+<a class=tag href=/tags/devops>#devops</a>
+<a class=tag href=/tags/terraform>#terraform</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://lanziani.com/posts/2021/03/jenkins-credentials/>
 Jenkins Credentials
 </a>
@@ -102,26 +124,9 @@ Post from mobile
 <a class=tag href=/tags/fun>#fun</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://lanziani.com/posts/2016/02/openvpn/>
-openvpn
-</a>
-</h2>
-<div>
-<p><p>This is a template for a post</p>
-<p>You can add links in this <a href=https://daringfireball.net/projects/markdown/syntax#link>format</a>:</p></p>
-<p><a href=/posts/2016/02/openvpn/>Read more...</a></p>
-</div>
-<div class=post-footer>
-<time>February 7, 2016</time>
-<a class=tag href=/tags/general>#general</a>
-<a class=tag href=/tags/template>#template</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 7</p>
+<p>Page 1 of 8</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
