deploy: LucaLanziani/personal-site-hugo@6e15651cddd52bfe2e864776ff69be7e17f7b0f3

--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
 </div>
 <article>
 <h2>
+<a href=https://lanziani.com/posts/2021/10/me/>
+Me
+</a>
+</h2>
+<div>
+<p>I&rsquo;m not fronted or backend. I&rsquo;m not DevOps or SRE. I&rsquo;m not Developer or Architect.
+I love software in any shape or form. I love the fact that I can &ldquo;materialize&rdquo; ideas with it. I love problems and I love challenges.
+❤👨‍💻</p>
+</div>
+<div class=post-footer>
+<time>October 28, 2021</time>
+<a class=tag href=/tags/devops>#devops</a>
+<a class=tag href=/tags/software>#software</a>
+<a class=tag href=/tags/frontend>#frontend</a>
+<a class=tag href=/tags/backend>#backend</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://lanziani.com/posts/2021/10/genesis/>
 Let's talk terraform: genesis
 </a>
@@ -106,22 +125,6 @@ You can optionally specify the starting point and the chunk size.</p></p>
 <a class=tag href=/tags/bash>#bash</a>
 <a class=tag href=/tags/file>#file</a>
 <a class=tag href=/tags/chunk>#chunk</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://lanziani.com/posts/2016/03/post-from-mobile/>
-Post from mobile
-</a>
-</h2>
-<div>
-<p><p>Just for fun.</p></p>
-<p><a href=/posts/2016/03/post-from-mobile/>Read more...</a></p>
-</div>
-<div class=post-footer>
-<time>March 13, 2016</time>
-<a class=tag href=/tags/trolling>#trolling</a>
-<a class=tag href=/tags/fun>#fun</a>
 </div>
 </article>
 </div>
