--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,8 @@
 <link rel=manifest href=/manifest.json>
 <link rel=mask-icon href=/safari-pinned-tab.svg color=#ff3db4>
 <meta name=theme-color content="#ffffff">
-<link rel=stylesheet href=https://lanziani.com/css/main.min.d48d1aad8559fbde420e741636240df9c13a00b2f7ad9b84f2a32fac01cbcd98.css>
-<link rel=stylesheet href=https://lanziani.com/css/custom.min.e9fa102c479d3861b07a8f380a42bb84b89e8e8df9ae556e7f4a4eacc7413e26.css>
+<link rel=stylesheet href=https://lanziani.com/css/main.min.043d28546d80a49caaa767d9230caf19eac4333a7d811f484d5a6022cd53621e.css>
+<link rel=stylesheet href=https://lanziani.com/css/custom.min.2b2f05827d088827536b7ac48ac709fde057768604271e899646ce74d66baf34.css>
 </head>
 <body>
 <nav>
@@ -46,9 +46,8 @@
 </nav>
 <div id=content class=content-container>
 <h1 class=post-title>About</h1>
-<div>
-<p>
-<p>Hello, I&rsquo;m Luca, nice to meet you.</p>
+<div class=post>
+<p><p>Hello, I&rsquo;m Luca, nice to meet you.</p>
 <img class=about-me src=/about/profile.jpg alt="A picture of me">
 <p>I&rsquo;m a Software Engineer based in Italy juggling between being a dad and a Technical Lead at <a href=https://nearform.com>NearForm</a>.</p>
 <p>Passionate about GitOps and Kubernetes, I&rsquo;m spending most of my time helping my Team build and scale our infrastructure.</p>
