deploy: LucaLanziani/personal-site-hugo@06d8199b8822f64778a60943244dd27d69ab4fc3

--- a/about/index.html
+++ b/about/index.html
@@ -36,8 +36,9 @@ About | Luca Lanziani
 <div id=content class=content-container>
 <h1 class=post-title>About</h1><div class=post>
 <p><p>Hello, I&rsquo;m Luca, nice to meet you.</p><img class=about-me src=/about/profile.jpg alt="A picture of me">
-<p>I&rsquo;m a Software Engineer based in Italy juggling between being a dad and a Technical Lead at <a href=https://nearform.com>NearForm</a>.</p><p>Passionate about GitOps and Kubernetes, I&rsquo;m spending most of my time helping my Team build and scale our infrastructure.</p><p>Being Italian, I love socializing so feel free to reach out to me if you want to connect.</p><ul>
-<li>Twitter <a href=https://twitter.com/lucalanziani>@lucalanziani</a></li><li>Email <a href=mailto:luca+site@lanziani.com>luca+site@lanziani.com</a></li></ul><h1 id=side-projects>Side projects</h1><h2 id=templator>Templator</h2><p>A gitops oriented template tool <a href=https://github.com/gitops-toolbox/templator>gitops-toolbox/templator</a></p></p></div><div class=page-footer>
+<p>I&rsquo;m a Software Engineer based in Italy juggling being a dad and a Technical Director at <a href=https://nearform.com>NearForm</a>.</p><ul>
+<li>Born as a Software Developer with a real passion for Linux.</li><li>Got interested in infrastructure and processes soon after the start of my professional career.</li><li>Grown into this new mindset between DevOps and SRE.</li><li>Moved to management almost 6 years ago, where I keep pushing the DevOps philosophy whenever I can.</li></ul><p>Lately obesessed with GitOps and Kubernetes.</p><p>Being Italian, I love socializing so feel free to reach out to me if you want to connect.</p><ul>
+<li>Twitter <a href=https://twitter.com/lucalanziani>@lucalanziani</a></li><li>Email <a href=mailto:luca+site@lanziani.com>luca+site@lanziani.com</a></li></ul><h2 id=side-projects>Side projects</h2><h3 id=templator>Templator</h3><p>A gitops oriented template tool <a href=https://github.com/gitops-toolbox/templator>gitops-toolbox/templator</a></p></p></div><div class=page-footer>
 </div><link rel=stylesheet type=text/css href=/css/katex.min.css crossorigin=anonymous>
 <script type=text/javascript src=/js/katex.min.js crossorigin=anonymous></script>
 <script type=text/javascript src=/js/auto-render.min.js onload=renderMathInElement(document.body) crossorigin=anonymous></script>
