deploy: LucaLanziani/personal-site-hugo@063c53c0c0fdeda809cdca1b571086ba633467ec

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 It’s not uncommon in my work to work on Monitoring or Observability problems.
 A team or multiple teams deploy their applications in one of the environments, we can assume production, and they want to know how the System behaves.
 The evolution I’ve seen is:
-This is the first of a series of blog posts about Monitoring Dashboards; If you want to talk about this with me, you can find me on Twitter (Twitter post link) or LinkedIn (LinkedIn post Link).</p><p><a href=/posts/2023/02/monitoring-status-dashboards/>Read more...</a></p></div><div class=post-footer><time>February 12, 2023</time>
+This is the first of a series of blog posts about Monitoring Dashboards; If you want to talk about this with me, you can find me on Twitter or LinkedIn.</p><p><a href=/posts/2023/02/monitoring-status-dashboards/>Read more...</a></p></div><div class=post-footer><time>February 12, 2023</time>
 <a class=tag href=/tags/status>#Status</a>
 <a class=tag href=/tags/dashboards>#Dashboards</a>
 <a class=tag href=/tags/monitoring>#Monitoring</a>
